--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "typescript": "^3.4.1",
     "webpack": "^4.29.6"
   },
-  "author": "Ivan Mushketyk",
+  "author": "Tamas Dinh - tamas.dinh@gmail.com",
   "license": "MIT"
 }
