chore: added S3 bucket to serverless.yml

--- a/serverless.yml
+++ b/serverless.yml
@@ -15,8 +15,11 @@ provider:
   region: ${opt:region, 'us-east-1'}
 
   environment:
+    AWS_REGION: ${self:provider.region}
     TODOS_TABLE: Todos-${self:provider.stage}
     TODO_ID_INDEX: todoId
+    TODO_IMAGES_S3_BUCKET: Todos-images-${self:provider.stage}
+    IMAGE_URL_EXPIRATION: 300
 
 custom:
   dynamodb:
@@ -80,6 +83,7 @@ functions:
 
 resources:
   Resources:
+    
     TodosDynamoDBTable:
       Type: "AWS::DynamoDB::Table"
       Properties:
@@ -104,3 +108,36 @@ resources:
               KeyType: HASH
             Projection:
               ProjectionType: ALL
+
+    TodoImagesBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: ${self:provider.environment.TODO_IMAGES_S3_BUCKET}
+        # CorsConfiguration:
+        #   CorsRules:
+        #     -
+        #       AllowedOrigins:
+        #         - '*'
+        #       AllowedHeaders:
+        #         - '*'
+        #       AllowedMethods:
+        #         - GET
+        #         - PUT
+        #         - POST
+        #         - DELETE
+        #         - HEAD
+        #       MaxAge: 3000
+
+    BucketPolicy:
+      Type: AWS::S3::BucketPolicy
+      Properties:
+        PolicyDocument:
+          Id: Todos-app-S3-Policy
+          Version: "2012-10-17"
+          Statement:
+            - Sid: PublicReadForGetBucketObjects
+              Effect: Allow
+              Principal: '*'
+              Action: 's3:GetObject'
+              Resource: 'arn:aws:s3:::${self:provider.environment.TODO_IMAGES_S3_BUCKET}/*'
+        Bucket: !Ref TodoImagesBucket
