--- a/serverless.yml
+++ b/serverless.yml
@@ -29,14 +29,14 @@ custom:
 
 functions:
 
-  # Auth:
-  #   handler: src/lambda/auth/auth0Authorizer.handler
+  Auth:
+    handler: src/lambda/auth/auth0Authorizer.handler
 
   GetTodos:
     handler: src/lambda/http/getTodos.handler
     events:
       - http:
-          # authorizer: Auth
+          authorizer: Auth
           method: get
           path: todos
           cors: true
@@ -50,7 +50,7 @@ functions:
     handler: src/lambda/http/createTodo.handler
     events:
       - http:
-          # authorizer: Auth
+          authorizer: Auth
           method: post
           path: todos
           cors: true
@@ -64,7 +64,7 @@ functions:
     handler: src/lambda/http/updateTodo.handler
     events:
       - http:
-          # authorizer: Auth
+          authorizer: Auth
           method: patch
           path: todos/{todoId}
           cors: true
@@ -79,7 +79,7 @@ functions:
     handler: src/lambda/http/deleteTodo.handler
     events:
       - http:
-          # authorizer: Auth
+          authorizer: Auth
           method: delete
           path: todos/{todoId}
           cors: true
@@ -94,7 +94,7 @@ functions:
     handler: src/lambda/http/generateUploadUrl.handler
     events:
       - http:
-          # authorizer: Auth
+          authorizer: Auth
           method: post
           path: todos/{todoId}/attachment
           cors: true
