feat: added filtering todos by userId
Now a user can only see todos uploaded by them.

--- a/serverless.yml
+++ b/serverless.yml
@@ -43,8 +43,8 @@ functions:
     iamRoleStatements:
       - Effect: Allow
         Action:
-          - dynamodb:Scan
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
+          - dynamodb:Query
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}/*
 
   CreateTodo:
     handler: src/lambda/http/createTodo.handler
