--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,12 @@
     "@types/axios": "^0.14.0",
     "@types/http-errors": "^1.6.1",
     "@types/jwk-to-pem": "^2.0.0",
+    "@types/node-fetch": "^2.5.4",
     "aws-xray-sdk": "^2.2.0",
     "axios": "^0.19.0",
     "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
+    "jwk-to-pem": "^2.0.2",
     "middy": "^0.27.0",
     "node-fetch": "^2.6.0",
     "source-map-support": "^0.5.11",
